# todoist34

./: .env.example  .gitignore  .uvignore  CHECKLIST_MIGRATION.md  CLAUDE.md  INDEX.md  MIGRATION_SUMMARY.md  MIGRATION_UV.md  Makefile  QUICKSTART_UV.md  README.md  START.md  TUTORIAL.md  UV_VS_PIP.md  main.py  pyproject.toml  requirements.txt  test_api.sh
backend/: __init__.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  task.py  user.py
backend/routes/: __init__.py  auth.py  tasks.py
backend/schemas/: __init__.py  task.py  user.py
backend/services/: __init__.py  security.py
scripts/: README.md  dev.sh  setup.sh  start.sh
static/css/: styles.css
static/js/: app.js
templates/: index.html
